--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   shared_preferences: any
   flutter_svg: any
   fluttertoast: any
+  web_socket_channel: any
+  dio: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
